<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black300"
    tools:context=".InputActivity">

  <TextView
      android:id="@+id/hello"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Hello"
      android:textColor="@color/white"
      android:textSize="32sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.248" />

  <TextView
      android:id="@+id/inputpl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/Input1"
      android:textColor="@color/white100"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hello" />

  <EditText
      android:id="@+id/Input"
      android:layout_width="335dp"
      android:layout_height="64dp"
      android:layout_marginTop="48dp"
      android:background="@drawable/round_button2"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/Input"
      android:textAlignment="center"
      android:textColor="@color/input"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputpl" />

  <Button
      android:id="@+id/resume"
      android:layout_width="210dp"
      android:layout_height="60dp"
      android:layout_marginTop="136dp"
      android:background="@drawable/round_button"
      android:text="@string/Resume"
      android:textColor="@color/resume"
      android:textSize="20sp"
      android:onClick="resume"
      app:backgroundTint="@color/resumebackground"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputpl" />

  <TextView
      android:id="@+id/VISION"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/VISION"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/resume"
      app:layout_constraintVertical_bias="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>